perfectionist ocd - fixed 2 pixel gap of colour when hovering due to border issue

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@
 .card-link {
     text-decoration: none;
     border-radius: 10px;
+    border: solid 1px var(--boolean-color);
 }
 
 .card-link:visited {
@@ -93,7 +94,6 @@
     display: grid;
     width: 100%;
     grid-template-rows: repeat(3, auto);
-    border: solid 1px var(--boolean-color);
     border-radius: 10px;
     position: relative;
 }
@@ -120,7 +120,6 @@
 }
 
 .icons {
-    display: inline;
     justify-self: end;
     align-self: center;
     padding: 10px;
